2011-07-07  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el: Bind C-u f12 to semantic-ia-fast-jump-back.
	Remove "ESC ESC <f12>" binding.
	From now on, don't support emacs-21.
	([f4]): Bind C-u f4 to previous-error.
	("gud"): Bind C-u f5 to gud-kill in gud-minor-mode.

	* init-misc.el: Bind C-u f2 to bm-previous.
	Remove "ESC ESC <f2>" binding.

	* init-site.el: Bind C-u f2 to viss-bookmark-prev-buffer.

	* init-misc.el: Revert C-u f3 to highlight-symbol-prev.
	Remove "ESC ESC <f3>" binding.

2011-07-06  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el: Bing "ESC ESC <f2>" to bm-previous.
	: Bind "ESC ESC <f3>" to highlight-symbol-prev.

	* init-basic.el: Bind "ESC ESC <f12>" to semantic-ia-fast-jump-back.

2011-07-04  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el ("tabbar"): Fix tabbar-ruler' face family.

	* init-basic.el (grep-dir-format): Use default grep option in gnu/linux.

2011-07-03  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el ("tabbar"): Fix tabbar-ruler in terminal and window-system.
	(require): Fix tabbar.

	* init-basic.el: Keep auto-insert-query 'function
	(find-dotemacs-file): Fix find-dotemacs-file.

2011-07-02  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el (tabbar-popup-menu): Fix tabbar-ruler.

	* init-basic.el (grep-current-dir): Fix grep.

2011-07-01  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el: C-c C-v to toggle view-mode.

2011-06-30  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el: Fix grep on aix.

2011-06-28  Meteor Liu  <meteor1113@gmail.com>

	* init-toolbar.el: Fix vimpulse.

	* init-misc.el ("viper"): Fix vimpulse.

2011-06-27  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el ("viper"): Use vimpulse.

	* init-toolbar.el: viper-mode menu item.

2011-06-26  Meteor Liu  <meteor1113@gmail.com>

	* init-toolbar.el: Add minor-mode menu item - goto-address-mode.

2011-06-25  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el (grep-current-dir): Fix grep.
