@@ -1,3 +1,7 @@
+2011-07-08  Meteor Liu  <meteor1113@gmail.com>
+
+	* init-basic.el (calendar-chinese-all-holidays-flag): Set calendar.
+
 2011-07-07  Meteor Liu  <meteor1113@gmail.com>
 
 	* init-basic.el: Bind C-u f12 to semantic-ia-fast-jump-back.
